# CommandServer

./: .gitignore  CMakeLists.txt  CommandServer.pro  README.md  main.cpp  tcpreciver.cpp  tcpreciver.h
config/: config.json
src/: tcpreciver.cpp  tcpreciver.h
